fix social media icon line break in ff

--- a/_sass/hydejack/_social-inline.scss
+++ b/_sass/hydejack/_social-inline.scss
@@ -19,7 +19,7 @@
         text-align: center;
         font-size: 1.6rem;
         line-height: 3rem;
-        width: 3.125rem;
+        width: 3.1249rem;
         height: 4rem;
         padding: .5rem 0;
 
